# ffcache

./: .gitignore  LICENSE  MANIFEST.in  README.md  example.py  ffcache.py  pyproject.toml
.github/workflows/: build.yml
ffcache/: __init__.py  __main__.py  cli.py  ffcache.pyx
